:lipstick: Feat: Aparência da tela inicial finalizada

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -119,6 +119,10 @@
         @apply border-border outline-ring/50;
     }
 
+    html {
+        font-size: 110%;
+    }
+
     body {
         @apply bg-background text-foreground;
     }
